y_main: HTML: NAV revised

--- a/place.html
+++ b/place.html
@@ -29,11 +29,24 @@
                     <a href="./event.html" class="dropbtn">EVENT</a>
                     <aside class="dropdown-content">
                         <a href="./event.html#eFeature">Feature</a>
-                        
+                        <a href="./index.html#eFeature">Featured Event</a>
+                        <a href="./index.html#eCategory">Category</a>
+                        <a href="./index.html#eList">Event List</a>
+                        <a href="./index.html#eArticle">Articles</a>
+                        <a href="./index.html#eRegister">Register Event</a>
+                        <a href="./index.html#eReference">References</a>
                     </aside>
                 </li>
                 <li class="dropdown_custom">
                     <a href="./place.html" class="dropbtn">PLACE</a>
+                    <aside class="dropdown-content">
+                        <a href="#restaurant">Restaurant</a>
+                        <a href="#activities">Activities</a>
+                        <a href="#exhibition">Exhibition</a>
+                        <a href="#theatre">Theatre</a>    
+                        <a href="#review">Review</a>
+                        <a href="#reference">Reference</a>
+                    </aside>                    
                 </li>
             </ul>
             <form>
@@ -47,20 +60,21 @@
                 <li>
                     <a href="./index.html">HOME</a>
                     <ul>
-                        <li><a href="./index.html#eFeature">Featured Event</a></li>
-                        <li><a href="./index.html#eCategory">Category</a></li>
-                        <li><a href="./index.html#eArticle">Event List</a></li>
-                        <li><a href="./index.html#eRegister">Register Event</a></li>
-                        <li><a href="./index.html#eReference">References</a></li>
+                        <li><a href="./event.html#about">About</a></li>
+                        <li><a href="./event.html#event">Recent Event</a></li>
+                        <li><a href="./event.html#place">Place To Go</a></li>
+                        <li><a href="./event.html#contact">Contact</a></li>
                     </ul>
                 </li>
                 <li>
                     <a href="./event.html">EVENT</a>
                     <ul>
-                        <li><a href="./event.html#about">About</a></li>
-                        <li><a href="./event.html#event">Recent Event</a></li>
-                        <li><a href="./event.html#place">Place To Go</a></li>
-                        <li><a href="./event.html#contact">Contact</a></li>
+                        <li><a href="./index.html#eFeature">Featured Event</a></li>
+                        <li><a href="./index.html#eCategory">Category</a></li>
+                        <li><a href="./index.html#eList">Event List</a></li>
+                        <li><a href="./index.html#eArticle">Articles</a></li>
+                        <li><a href="./index.html#eRegister">Register Event</a></li>
+                        <li><a href="./index.html#eReference">References</a></li>
                     </ul>
                 </li>
                 <li>
