y_main: Header revised

--- a/place.html
+++ b/place.html
@@ -19,10 +19,10 @@
                 <li class="dropdown_custom">
                     <a href="./index.html" class="dropbtn">HOME</a>
                     <aside class="dropdown-content">
-                        <a href="#about">About</a>
-                        <a href="#event">Recent Event</a>
-                        <a href="#place">Place To Go</a>
-                        <a href="#contact">Contact</a>
+                        <a href="./index.html#about">About</a>
+                        <a href="./index.html#event">Recent Event</a>
+                        <a href="./index.html#place">Place To Go</a>
+                        <a href="./index.html#contact">Contact</a>
                     </aside>
                 </li>
                 <li class="dropdown_custom">
@@ -60,21 +60,21 @@
                 <li>
                     <a href="./index.html">HOME</a>
                     <ul>
-                        <li><a href="./event.html#about">About</a></li>
-                        <li><a href="./event.html#event">Recent Event</a></li>
-                        <li><a href="./event.html#place">Place To Go</a></li>
-                        <li><a href="./event.html#contact">Contact</a></li>
+                        <li><a href="./index.html#about">About</a></li>
+                        <li><a href="./index.html#event">Recent Event</a></li>
+                        <li><a href="./index.html#place">Place To Go</a></li>
+                        <li><a href="./index.html#contact">Contact</a></li>
                     </ul>
                 </li>
                 <li>
                     <a href="./event.html">EVENT</a>
                     <ul>
-                        <li><a href="./index.html#eFeature">Featured Event</a></li>
-                        <li><a href="./index.html#eCategory">Category</a></li>
-                        <li><a href="./index.html#eList">Event List</a></li>
-                        <li><a href="./index.html#eArticle">Articles</a></li>
-                        <li><a href="./index.html#eRegister">Register Event</a></li>
-                        <li><a href="./index.html#eReference">References</a></li>
+                        <li><a href="./event.html#eFeature">Featured Event</a></li>
+                        <li><a href="./event.html#eCategory">Category</a></li>
+                        <li><a href="./event.html#eList">Event List</a></li>
+                        <li><a href="./event.html#eArticle">Articles</a></li>
+                        <li><a href="./event.html#eRegister">Register Event</a></li>
+                        <li><a href="./event.html#eReference">References</a></li>
                     </ul>
                 </li>
                 <li>
