main: revising is done

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                         <strong>Restaurant</strong> 
                         <p>Find Stunning Places!</p>
                         <small>
-                            You can find nice restaurants in this website and also it is possible to check review from consumer who already visit.
+                            You can find nice restaurants in this website.
                         </small>
                         <a href="#">Go &#187;</a>
                     </aside>
